--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="selected_icon">Selected icon:</string>
     <string name="add_group">Add group</string>
     <string name="update_group">Update group</string>
+    <string name="delete_group">Delete group</string>
 </resources>
