--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="add_group">Add group</string>
     <string name="update_group">Update group</string>
     <string name="delete_group">Delete group</string>
+    <string name="choose_tab_item_for_delete">Choose tab item for delete</string>
 </resources>
