--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,8 +41,8 @@
     <string name="dismiss">Dismiss</string>
     <string name="confirm">Confirm</string>
     <string name="are_you_sure">Are you sure?</string>
-    <string name="you_have_tasks_with_group_are_you_sure_you_want_to_delete_this_tasks">You have %1$d tasks with group
-        %2$s!\n Are you sure you want to delete this tasks?
+    <string name="you_have_tasks_with_group_are_you_sure_you_want_to_delete_this_tasks">"You have %1$d tasks with group
+        %2$s! Are you sure you want to delete this tasks? "
     </string>
-    <string name="you_can_t_delete_all_tasks">You can\'t delete All tasks</string>
+    <string name="you_can_t_delete_all_tasks">You can\'t delete task group \"All\"</string>
 </resources>
